<resources>
    <string name="app_name">P222Appli</string>
    <string name="trie_dechet">Waste Sorting</string>
    <string name="trier">Sorting</string>
    <string name="ou_trier">Where to sort</string>
    <string name="profil_points">Profil and Points</string>
    <string name="waste_types">Waste Types</string>
    <string name="wt_glass">Glass</string>
    <string name="wt_paper">Paper / Cardboard</string>
    <string name="wt_plastic">Plastic</string>
    <string name="wt_metal">Metal</string>
    <string name="wt_other">Other</string>
    <string name="validate">Validate</string>
    <string name="wt_organic">Organic</string>
    <string name="profilmail">User mail :</string>
    <string name="profilname">Username :</string>
    <string name="noFound">No Found</string>
    <string name="goingToMap">loading map</string>
    <string name="legendeGlass">Orange: glass</string>
    <string name="legendePaper">Blue: paper</string>
    <string name="legendePlastic">Yellow: plastic</string>
    <string name="legendeMetal">Green: metal</string>
    <string name="legendeOrganic">Red: organic</string>
    <string name="legendeOthers">Purple: others</string>
    <string name="login_name">name</string>
    <string name="login_mail">mail</string>
    <string name="login_mdp">password</string>
    <string name="toNewuser">Register</string>
    <string name="connect">Connect</string>
    <string name="adressSelected">\"Address selected \"</string>
    <string name="toSort">What do you have to sort out today?</string>
    <string name="yourSelection">your selection </string>
</resources>