<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_WasteSorting">

    <LinearLayout
        android:id="@+id/linly_body"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="113dp"
        android:layout_marginEnd="113dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_waste_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/waste_types" />

        <RadioGroup
            android:id="@+id/rd_waste_choice"
            android:layout_width="185dp"
            android:layout_height="357dp">

            <RadioButton
                android:id="@+id/rdbt_glass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wt_glass" />

            <RadioButton
                android:id="@+id/rdbt_paper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wt_paper" />

            <RadioButton
                android:id="@+id/rdbt_plastic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wt_plastic" />

            <RadioButton
                android:id="@+id/rdbt_metal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wt_metal" />

            <RadioButton
                android:id="@+id/rdbt_organic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wt_organic" />

            <RadioButton
                android:id="@+id/rdbt_other"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wt_other" />

        </RadioGroup>

        <Button
            android:id="@+id/bt_validate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/validate" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>