<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_Inscriptions">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="50pt"
    tools:layout_editor_absoluteX="29dp"
    tools:layout_editor_absoluteY="0dp">


        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/login_name"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="51dp"
            tools:layout_editor_absoluteY="111dp" />

        <EditText
            android:id="@+id/et_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/login_mail"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/login_mdp"
            android:inputType="textPassword" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="50pt"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="0dp">

        <Button
        android:id="@+id/bt_valider"
        android:layout_width="159dp"
        android:layout_height="wrap_content"
            android:layout_marginTop="70pt"
        android:layout_marginLeft="50pt"
        android:text="Valider"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="198dp" />
    </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

