<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TableLayout
            android:id="@+id/tably_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/txt_profilname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profilname" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_profil_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="hint" />
                </com.google.android.material.textfield.TextInputLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/txt_profilmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profilmail" />

                <EditText
                    android:id="@+id/input_mail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textEmailAddress" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </TableLayout>

        <Button
            android:id="@+id/bt_validate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/validate" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>